--- a/tasks/deploy-postgresql.yml
+++ b/tasks/deploy-postgresql.yml
@@ -16,15 +16,15 @@
     name: postgresql-quay
     image: registry.redhat.io/rhel8/postgresql-10:1
     state: started
-    restart: yes
+    restart: true
     restart_policy: "always"
     ports:
-        - "5432:5432"
+      - "5432:5432"
     env:
-        POSTGRESQL_USER: "quayuser"
-        POSTGRESQL_PASSWORD: "quaypass"
-        POSTGRESQL_DATABASE: "quay"
-        POSTGRESQL_ADMIN_PASSWORD: "adminpass"
+      POSTGRESQL_USER: "quayuser"
+      POSTGRESQL_PASSWORD: "quaypass"
+      POSTGRESQL_DATABASE: "quay"
+      POSTGRESQL_ADMIN_PASSWORD: "adminpass"
     volume:
       - "{{ QUAY_ROOT_DIR }}/postgres-quay:/var/lib/pgsql/data:Z"
 
@@ -61,4 +61,4 @@
 
 - name: Force systemd to reread configs
   ansible.builtin.systemd:
-    daemon_reload: yes
+    daemon_reload: true
