--- a/inventory.example
+++ b/inventory.example
@@ -1,23 +1,7 @@
-[quay-database]
-quay.homelab.work
-
-[quay-redis]
-quay.homelab.work
-
-[quay-nfs]
-quay.homelab.work
-
 [quay]
-quay.homelab.work
+localhost
 
-[quay-systems:children]
-quay-database
-quay-redis
-quay-nfs
-quay
-
-[quay-systems:vars]
-ansible_ssh_user=root
-quay_ansible_satellite_fqdn=sat6.homelab.work
-quay_ansible_satellite_key=rhel-7-server-minimal
-quay_ansible_satellite_org=homelab_infra
+[quay:vars]
+ansible_ssh_user=ec2-user
+ansible_connection=local
+#ansible_ssh_private_key_file
