--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,26 +3,25 @@
 
 fips_enabled: true
 
+quay_config_mode: false
+
 quay_hostname: 'quay.danclark.io'
 quay_san: ''
+quay_image: ''
 redis_hostname: 'redis.dns.podman'
 redis_password: 'strongpassword'
 redis_port: 6379
+redis_image:
 
 postgresql_user: 'quayuser'
 postgresql_password: 'quaypass'
 postgresql_hostname: 'postgresql-quay.dns.podman'
 postgresql_db: 'quay'
 postgresql_port: 5432
+postgresql_image:
 
+clair_image: ''
 
-# @var docker_login_quay: "undefined" # This optional value is pulled from the Red Hat solution to access quay images and the value is the entire login command such as: docker login -u='REDHAT_QUAY_USER' -p='LONG_UUID_STRING' quay.io"
-# docker_login_quay:
-
-# @var docker_login_redhat: "docker login -u='{{ UPSTREAM_REGISTRY_USERNAME}}' -p='{{ UPSTREAM_REGISTRY_PASSWORD }}' https://registry.redhat.io" # Command to access the Red Hat registry, built with UPSTREAM_REGISTRY_USERNAME and UPSTREAM_REGISTRY_PASSWORD variables
-docker_login_redhat: docker login -u='{{ UPSTREAM_REGISTRY_USERNAME}}' -p='{{ UPSTREAM_REGISTRY_PASSWORD }}
-
-# @todo this is actually being used for clair, need to test using clair and quay on postgres
 # @var postgresql_quay_db: clair  # The postgres clair database
 postgresql_quay_db: clair
 
@@ -32,65 +31,31 @@ postgresql_quay_user: quay
 # @var postgresql_quay_user_password: changeme # The postgres quay user password
 postgresql_quay_user_password: changeme
 
-# @var QUAY_CONFIG_PASSWORD: 'changeme' # The password for the quay config UI
-QUAY_CONFIG_PASSWORD: changeme
+# @var quay_config_password: 'changeme' # The password for the quay config UI
+quay_config_password: changeme
 
 # @var QUAY_CONFIG_PORT: '8443' # The port to access the quay configuration pod
-QUAY_CONFIG_PORT: 8443
+quay_config_port: 8080
 
 # @var QUAY_CONFIG_TAR: 'undefined' # After running the quay configuration download the tarball and set the path on this variable
 # QUAY_CONFIG_TAR:  "PATH_TO_CONFIG_TAR_FILE"
 
 # @var QUAY_HTTP_PORT: '80' # The port to access Quay if TLS is not enabled
-QUAY_HTTP_PORT: 80
+quay_http_port: 80
 
 # @var QUAY_HTTPS_PORT: '443' # The port to access Quay when TLS is enabled
-QUAY_HTTPS_PORT: 443
+quay_https_port: 443
 
 ### Clair ###
 # @var CLAIR_ENDPOINT: '{{ QUAY_ENDPOINT }}' # The FQDN for your clair server, defaults to same as quay
-CLAIR_ENDPOINT: "{{ QUAY_ENDPOINT }}"
+clair_endpoint: "clair.dns.podman"
 
 # @var CLAIR_ENCRYPT: true # Boolean on if Clair should run on TLS
-CLAIR_ENCRYPT: true
-
-# This isn't currently used but may be used in the future
-# @var quay_organization_ca_cert: '/etc/ipa/ca.crt' # ONLY USED FOR AUTOMATED TESTING Path to your organizations CA chain
-# quay_organization_ca_cert: '/etc/ipa/ca.crt'
-
-# @var QUAY_CLAIR_HTTP_NO_PROXY: 'undefined' # list of systems not to proxy (standard NO_PROXY syntax)
-# QUAY_CLAIR_HTTP_NO_PROXY: "{{ QUAY_ENDPOINT }}"
-
-# @var QUAY_CLAIR_HTTP_PROXY: 'undefined' # The address and port to http proxy server
-# QUAY_CLAIR_HTTP_PROXY: http://proxy.example.com:8080
-
-# @var QUAY_CLAIR_HTTPS_PROXY: 'undefined' # The address and port to https proxy server
-# QUAY_CLAIR_HTTPS_PROXY: http://proxy.example.com:8080
+clair_encrypt: true
 
 ### Redis ###
 # @var QUAY_REDIS_DEPLOY: 'true' # Boolean to decide if Redis should be deployed
-QUAY_REDIS_DEPLOY: true
-
-# @var QUAY_REDIS_CONTAINERIZE: 'true' # If deployed Redis should be containerized
-QUAY_REDIS_CONTAINERIZE: true
+quay_redis_deploy: true
 
 # @var QUAY_ROOT_DIR: '/opt/quay' # The directory where quay and clair configurations will be placed
-QUAY_ROOT_DIR: /opt/quay
-
-# @var QUAY_STORAGE_DIR: 'unset' # Optional extra directory to create that can hold container images
-# QUAY_STORAGE_DIR: "{{ QUAY_ROOT_DIR }}/storage"
-
-### Create Repo playbook ###
-# @var UPSTREAM_REGISTRY_PASSWORD: 'jdoe' # Username for the add repo playbook - should be replaced soon
-# @var UPSTREAM_REGISTRY_USERNAME: 'password' # Passowrd for the add repo playbook - should be replaced soon
-
-### Deprecated ###
-# @var QUAY_AUTH_TOKEN: 'undefined' # This is used for the api calls to populate the registry post install
-# QUAY_AUTH_TOKEN: 'undefined'
-
-# @var SATELLITE_REGISTER: false # This enables the satellite registration portion of the role that will be removed soon
-SATELLITE_REGISTER: false
-
-# @var quay_ansible_satellite_fqdn: 'satellite.example.com' # DEPRECATED Satellite FQDN
-# @var quay_ansible_satellite_key: 'example-key' # DEPRECATED Satellite key
-# @var quay_ansible_satellite_org: 'example-org'# DEPRECATED Satellite org
+quay_root_dir: /opt/quay
