--- a/tasks/deploy-quay.yml
+++ b/tasks/deploy-quay.yml
@@ -22,23 +22,50 @@
       - "{{ quay_root_dir }}/storage:/datastorage:Z"
   tags:
     - quay
+  when: (podman)
+
+- name: Start quay (docker)
+  community.docker.docker_container:
+    name: quay
+    image: registry.redhat.io/quay/quay-rhel8:v3.5.1
+    state: started
+    restart: yes
+#    network_mode: host
+#    published_ports:
+#      - "0.0.0.0:443:8443"
+    network_mode: quay_net
+    networks:
+      - name: host
+        aliases:
+          - quay
+    ports:
+     - "{{ quay_https_port }}:8443"
+#    sysctls:
+#      net.core.somaxconn: 4096
+    volumes:
+      - "{{ quay_root_dir }}/config:/conf/stack:Z"
+      - "{{ quay_root_dir }}/storage:/datastorage:Z"
+  when: (not podman)
 
 - name: Create quay systemd service file
   command: >
     podman generate systemd -n -f quay
   args:
     chdir: '/tmp/'
+  when: (podman)
 
 - name: Write quay systemd unit file
   copy:
     src: '/tmp/container-quay.service'
     dest: '/usr/lib/systemd/system/container-quay.service'
     remote_src: true
+  when: (podman)
 
 - name: Remove temp unit file
   file:
     path: '/tmp/container-quay.service'
     state: absent
+  when: (podman)
 
 - name: Start quay after the postgresql-quay container service
   community.general.ini_file:
@@ -46,7 +73,9 @@
     section: Unit
     option: After
     value: 'network-online.target,container-postgresql-quay.service'
+  when: (podman)
 
 - name: Force systemd to reread configs
   ansible.builtin.systemd:
     daemon_reload: true
+  when: (podman)
