--- a/tasks/deploy-redis.yml
+++ b/tasks/deploy-redis.yml
@@ -40,6 +40,7 @@
   when: ( podman )
 
 - name: Write reids systemd unit file
+  become: true
   copy:
     src: '/tmp/container-redis.service'
     dest: '/usr/lib/systemd/system/container-redis.service'
@@ -53,6 +54,7 @@
   when: ( podman )
 
 - name: Force systemd to reread configs
+  become: true
   ansible.builtin.systemd:
     daemon_reload: true
   when: ( podman )
